PCQ-1622 reflection